--- a/pg_eco_local.html
+++ b/pg_eco_local.html
@@ -772,7 +772,7 @@
         </div>
         
         <div class="hero-buttons">
-            <a href="pg_methode_paiement.html" class="btn btn-primary">
+            <a href="pg_methode_paie_eco_local.html" class="btn btn-primary">
                 <i class="fas fa-download"></i> Télécharger le programme
             </a>
         </div>
@@ -877,10 +877,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <span>4.9/5 (215 avis)</span>
+                        <span>4.9/5 (17 avis)</span>
                     </div>
-                    <p>"Grâce à cette formation, j'ai lancé mon business de vente d'accessoires et je réalise déjà 1500€/mois en 3 mois seulement !"</p>
-                    <a href="#testimonials" class="btn btn-secondary" style="width: 100%; text-align: center; margin-top: 1rem;">
+                    <p>"Grâce à cette formation, j'ai lancé mon business de vente d'accessoires et je réalise déjà 160.000/mois de bénéfices en 3 mois seulement !"</p>
+                    <a href="temoignages.html" class="btn btn-secondary" style="width: 100%; text-align: center; margin-top: 1rem;">
                         Voir tous les avis
                     </a>
                 </div>
@@ -889,9 +889,8 @@
                 <div class="sidebar-card" style="border: 2px solid #00ffcc;">
                     <h3><i class="fas fa-gift"></i> Bonus Exclusifs</h3>
                     <p><strong>Liste</strong> des produits locaux les plus rentables</p>
-                    <p><strong>Modèles</strong> de messages pour WhatsApp Business</p>
-                    <p><strong>Guide PDF</strong> des tarifs de livraison locaux</p>
-                    <p><strong>Accès</strong> à notre réseau de fournisseurs locaux</p>
+                    <p><strong>Accès</strong> à un business plan</p>
+                    <p><strong>check-list</strong> pour démarrer</p>
                 </div>
             </div>
         </div>
@@ -958,7 +957,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p class="testimonial-content">"J'ai commencé avec 200€ de capital. En 4 mois, je vends maintenant 50 paires de chaussures par semaine avec une livraison en 24h dans ma ville. Cette formation m'a tout appris !"</p>
+                <p class="testimonial-content">"J'ai commencé avec <strong>70.000 FCFA</strong> de capital. En 4 mois, je vends maintenant 50 paires de chaussures par semaine avec une livraison en 24h dans ma ville. Cette formation m'a tout appris !"</p>
                 <div class="testimonial-author">
                     <span>Fatou D., Entrepreneuse</span>
                 </div>
@@ -1003,7 +1002,7 @@
         <div class="cta-content">
             <h2>Prêt à lancer votre e-commerce local ?</h2>
             <p>Démarrez dès aujourd'hui votre business en ligne avec des méthodes adaptées à votre marché local et des résultats rapides.</p>
-            <a href="pg_methode_paiement.html" class="btn btn-primary" style="margin-top: 1.5rem;">
+            <a href="pg_methode_paie_eco_local.html" class="btn btn-primary" style="margin-top: 1.5rem;">
                 Commencer maintenant
             </a>
         </div>
@@ -1038,9 +1037,9 @@
                 <ul>
                     <li><a href="pg_eco_local.html">E-commerce Local</a></li>
                     <li><a href="pg_monetise_fac.html">Monétisation Facebook</a></li>
-                    <li><a href="#">Growth TikTok</a></li>
-                    <li><a href="#">Création de Contenu</a></li>
-                    <li><a href="#">Automatisation Social Media</a></li>
+                    <li><a href="nos_formations.html">Growth TikTok</a></li>
+                    <li><a href="nos_formations.html">Création de Contenu</a></li>
+                    <li><a href="nos_formations.html">Automatisation Social Media</a></li>
                 </ul>
             </div>
             
