--- a/pg_tiktok_monetise.html
+++ b/pg_tiktok_monetise.html
@@ -824,7 +824,7 @@
 
             <div class="formation-price price-premium">
                 <span class="price-old">11.850 FCFA</span>
-                3.300 FCFA/5,46$
+                3.400 FCFA/5,65$
             </div>
             <div>    
             <a href="#formation" class="btn btn-primary">Commencer maintenant</a>
@@ -862,7 +862,7 @@
                 <div class="download-section">
                     <h3 class="download-title">Accès Immédiat à la Formation</h3>
                     <p class="download-text">Téléchargez maintenant et commencez à générer des revenus dès cette semaine</p>
-                    <a class="btn"href="pg_methode_paiement.html">Télécharger</a>
+                    <a class="btn"href="pg_methode_paie_tiktok_moneti.html">Télécharger</a>
                 </div>
             </div>
             
@@ -992,7 +992,7 @@
             <h3 class="cta-title">Prêt à Créer Votre Compte Monétisable ?</h3>
             <p class="cta-text">Rejoignez nos étudiants qui génèrent déjà des revenus passifs avec TikTok</p>
             <div class="cta-buttons">
-                <a href="pg_methode_paiement.html" class="btn btn-primary">Télécharger la formation</a>
+                <a href="pg_methode_paie_tiktok_moneti.html" class="btn btn-primary">Télécharger la formation</a>
                 <a href="nos_formations.html" class="btn btn-secondary">Voir nos formules premium</a>
             </div>
         </div>
