--- a/nos_formations.html
+++ b/nos_formations.html
@@ -735,6 +735,27 @@
                 </div>
             </div>
 
+             <!-- Formation 3 - Exemple avec image de fond -->
+             <div class="formation-card" data-categories="payant business" data-status="disponible" data-price="payant" style="--order: 3">
+                <div class="formation-bg-image" style="background-image: url('x1.jpeg')"></div>
+                <div class="formation-header">
+                    <span class="formation-badge badge-payant">Payant</span>
+                    <span class="formation-status status-disponible">Disponible</span>
+                    <h3 class="formation-title">Création d'un compte paypal dans un pays non éligible</h3>
+                    <div class="formation-categories">
+                        <span class="category-tag tag-business">Business en ligne</span>
+                    </div>
+                </div>
+                <div class="formation-body">
+                    <p class="formation-description">
+                        Solution légale pour créer et utiliser un compte PayPal même si votre pays n'est pas officiellement supporté.
+                    </p>
+                </div>
+                <div class="formation-footer">
+                    <a href="pg_compte_paypal.html" class="btn btn-primary">En savoir plus</a>
+                </div>
+            </div>
+
             <!-- Formation 4 -->
             <div class="formation-card" data-categories="gratuit mindset" data-status="disponible" data-price="gratuit" style="--order: 4">
                 <div class="formation-header">
@@ -951,32 +972,7 @@
                 </div>
             </div>
 
-            <!-- Formation 13 -->
-            <div class="formation-card" data-categories="payant business" data-status="bientot" data-price="payant" style="--order: 13">
-                <div class="formation-header">
-                    <span class="formation-badge badge-payant">Payant</span>
-                    <span class="formation-status status-bientot">Bientôt dispo</span>
-                    <h3 class="formation-title">Création d'un compte PayPal dans un pays non éligible</h3>
-                    <div class="formation-categories">
-                        <span class="category-tag tag-business">Business en ligne</span>
-                    </div>
-                </div>
-                <div class="formation-body">
-                    <p class="formation-description">
-                        Solution légale pour créer et utiliser un compte PayPal même si votre pays n'est pas officiellement supporté.
-                    </p>
-                </div>
-                <div class="formation-footer">
-                    <button class="btn btn-secondary toggle-notify">Me notifier</button>
-                    <div class="notify-form">
-                        <div class="form-group">
-                            <input type="email" class="form-input" placeholder="Votre email" data-formation="Création d'un compte PayPal dans un pays non éligible">
-                        </div>
-                        <button class="btn btn-primary notify-submit">Être informé</button>
-                        <div class="notification-success">Merci ! Vous serez notifié dès que cette formation sera disponible.</div>
-                    </div>
-                </div>
-            </div>
+           
 
             <!-- Formation 14 -->
             <div class="formation-card" data-categories="payant nocode" data-status="bientot" data-price="payant" style="--order: 14">
