--- a/nos_formations.html
+++ b/nos_formations.html
@@ -667,10 +667,10 @@
     <section class="formations-section">
         <div class="formations-grid">
             <!-- Formation 1 -->
-            <div class="formation-card" data-categories="payant business" data-status="indisponible" data-price="payant" style="--order: 1">
+            <div class="formation-card" data-categories="payant business" data-status="disponible" data-price="payant" style="--order: 1">
                 <div class="formation-header">
                     <span class="formation-badge badge-payant">Payant</span>
-                    <span class="formation-status status-indisponible">Non disponible</span>
+                    <span class="formation-status status-disponible">Disponible</span>
                     <h3 class="formation-title">Monétiser Facebook depuis un pays non éligible</h3>
                     <div class="formation-categories">
                         <span class="category-tag tag-business">Business en ligne</span>
@@ -682,15 +682,9 @@
                     </p>
                 </div>
                 <div class="formation-footer">
-                    <button class="btn btn-secondary toggle-notify">Me notifier</button>
-                    <div class="notify-form">
-                        <div class="form-group">
-                            <input type="email" class="form-input" placeholder="Votre email" data-formation="Monétiser Facebook depuis un pays non éligible">
-                        </div>
-                        <button class="btn btn-primary notify-submit">Être informé</button>
-                        <div class="notification-success">Merci ! Vous serez notifié dès que cette formation sera disponible.</div>
-                    </div>
+                    <a href="pg_facebook_monetise.html" class="btn btn-primary">En savoir plus</a>
                 </div>
+                
             </div>
 
             <!-- Formation 2 - Exemple avec image de fond -->
